@@ -4,7 +4,6 @@ import org.example.musicscorebuilder.components.layout.*;
 import org.example.musicscorebuilder.components.layout.engine.ScoreStyle;
 import org.example.musicscorebuilder.components.music.SegmentType;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class SystemJustifier {
@@ -28,11 +27,17 @@ public class SystemJustifier {
         if (currentSystemWidth < targetWidth * style.getSystemMinFullnessRatio()) { return; }
 
         double extraSpace = targetWidth - currentSystemWidth;
-
         if (extraSpace <= 0) return;
 
-        double[] measuresDynamicWidths = calculateDynamicWidths(measures);
-        double totalDynamicWidthSum = Arrays.stream(measuresDynamicWidths).sum();
+        int measureCount = measures.size();
+        double[] measuresDynamicWidths = new double[measureCount];
+        double totalDynamicWidthSum = 0.0;
+
+        for (int i = 0; i < measureCount; i++) {
+            double mWidth = calculateMeasureDynamicWidth(measures.get(i));
+            measuresDynamicWidths[i] = mWidth;
+            totalDynamicWidthSum += mWidth;
+        }
 
         if (totalDynamicWidthSum <= 0) return;
 
@@ -40,36 +45,41 @@ public class SystemJustifier {
     }
 
     private void resetExtraWidths(List<MeasureLayout> measures) {
-        for (MeasureLayout measure : measures) {
-            for (SegmentLayout segment : measure.getSegments()) {
-                segment.setExtraWidth(0.0);
+        int measureCount = measures.size();
+        for (int i = 0; i < measureCount; i++) {
+            List<SegmentLayout> segments = measures.get(i).getSegments();
+            int segSize = segments.size();
+            for (int s = 0; s < segSize; s++) {
+                segments.get(s).setExtraWidth(0.0);
             }
         }
     }
 
     private void prepareEndBarline(SystemLayout system) {
-        MeasureLayout lastMeasure = system.getMeasures().getLast();
-        if (lastMeasure.getSegments().isEmpty()) return;
+        List<MeasureLayout> measures = system.getMeasures();
+        if (measures.isEmpty()) return;
 
-        SegmentLayout lastSeg = lastMeasure.getSegments().getLast();
+        MeasureLayout lastMeasure = measures.getLast();
+        List<SegmentLayout> segments = lastMeasure.getSegments();
+        if (segments.isEmpty()) return;
+
+        SegmentLayout lastSeg = segments.get(segments.size() - 1);
         if (lastSeg.getType() == SegmentType.BARLINE) {
             lastSeg.setType(SegmentType.END_BARLINE);
         }
     }
 
-    private double[] calculateDynamicWidths(List<MeasureLayout> measures) {
-        double[] widths = new double[measures.size()];
-        for (int i = 0; i < measures.size(); i++) {
-            widths[i] = calculateMeasureDynamicWidth(measures.get(i));
-        }
-        return widths;
-    }
-
     private double calculateMeasureDynamicWidth(MeasureLayout measure) {
-        return measure.getSegments().stream()
-                .filter(SegmentLayout::hasDynamicWidth)
-                .mapToDouble(SegmentLayout::getWidth)
-                .sum();
+        List<SegmentLayout> segments = measure.getSegments();
+        double sum = 0.0;
+        int size = segments.size();
+        for (int i = 0; i < size; i++) {
+            SegmentLayout seg = segments.get(i);
+            if (seg.hasDynamicWidth()) {
+                sum += seg.getWidth();
+            }
+        }
+        return sum;
     }
 
     private void distributeSpaceAndPositionMeasures(
@@ -80,8 +90,9 @@ public class SystemJustifier {
             double extraSpace
     ) {
         double currentX = system.getBraceWidth();
+        int measureCount = measures.size();
 
-        for (int i = 0; i < measures.size(); i++) {
+        for (int i = 0; i < measureCount; i++) {
             MeasureLayout measure = measures.get(i);
             measure.setX(currentX);
 
@@ -91,14 +102,23 @@ public class SystemJustifier {
                 double widthRatio = measureDynamicWidth / totalDynamicWidth;
                 double extraSpaceForMeasure = extraSpace * widthRatio;
 
-                List<SegmentLayout> dynamicSegments = measure.getSegments().stream()
-                        .filter(SegmentLayout::hasDynamicWidth)
-                        .toList();
+                List<SegmentLayout> segments = measure.getSegments();
+                int segSize = segments.size();
 
-                if (!dynamicSegments.isEmpty()) {
-                    double extraPerSegment = extraSpaceForMeasure / dynamicSegments.size();
-                    for (SegmentLayout segment : dynamicSegments) {
-                        segment.setExtraWidth(extraPerSegment);
+                int dynamicCount = 0;
+                for (int s = 0; s < segSize; s++) {
+                    if (segments.get(s).hasDynamicWidth()) {
+                        dynamicCount++;
+                    }
+                }
+
+                if (dynamicCount > 0) {
+                    double extraPerSegment = extraSpaceForMeasure / dynamicCount;
+                    for (int s = 0; s < segSize; s++) {
+                        SegmentLayout segment = segments.get(s);
+                        if (segment.hasDynamicWidth()) {
+                            segment.setExtraWidth(extraPerSegment);
+                        }
                     }
                 }
             }
